# Easy-Notepad

./: CMakeLists.txt  README.md
Easy Notepad/: main.cpp
EasyNotepad/: SFML_intro.hpp  elementGUI.hpp  main.cpp  scrollbar.hpp  text_wrapper.hpp  window.hpp
